--- a/CoreUI/CoreUI.csproj
+++ b/CoreUI/CoreUI.csproj
@@ -47,6 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Capabilities\ICanFindElementsByXpath.cs" />
     <Compile Include="Interactions\Action.cs" />
     <Compile Include="Interactions\Actions.cs" />
     <Compile Include="Alert.cs" />
