Adding Compatibility.IWebElement for seamless upgrade of Selenium based projects to TestMonkeys Framework

--- a/CoreUI/CoreUI.csproj
+++ b/CoreUI/CoreUI.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Capabilities\ICanFindElementsByXpath.cs" />
     <Compile Include="Capabilities\NativeSearchCapable.cs" />
+    <Compile Include="Compatibility\IWebElement.cs" />
     <Compile Include="Interactions\Action.cs" />
     <Compile Include="Interactions\Actions.cs" />
     <Compile Include="Alert.cs" />
