--- a/Audit/Auditing.csproj
+++ b/Audit/Auditing.csproj
@@ -46,8 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Audit.cs" />
+    <Compile Include="DefaultScreenShotProvider.cs" />
     <Compile Include="Events\ImageLoggedEventArgs.cs" />
     <Compile Include="Events\MessageLoggedEventArgs.cs" />
+    <Compile Include="IScreenShotProvider.cs" />
+    <Compile Include="Items\Image.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
